# DigIt

./: .env  digit_dataflow-graph.html  digit_dataflow.yml  inquire_mongo.py  operate_mongo.py  pyproject.toml  requirement.txt
agents/mcp_llm/: pyproject.toml
agents/mcp_llm/mcp_llm/: configuration.py  main.py
agents/mcp_llm/mcp_llm/chat/: session.py
agents/mcp_llm/mcp_llm/configs/: chat_session.yml  example.json  servers_config.json
agents/mcp_llm/mcp_llm/llm/: llm.py
agents/mcp_llm/mcp_llm/mcp_server/: server.py  tool.py
agents/mcp_llm/tests/: test_main.py
agents/terminal-input/terminal_input/: main.py
configs/: classification.json  get_search_link.yml  reasoner_agent.yml  search_word_converter.yml
scripts/: get_search_link.py  llm_test.py
